include_HEADERS = \
	liblnk.h

pkginclude_HEADERS = \
	liblnk/codepage.h \
	liblnk/definitions.h \
	liblnk/error.h \
	liblnk/extern.h \
	liblnk/features.h \
	liblnk/types.h

EXTRA_DIST = \
	liblnk.h.in \
	liblnk/definitions.h.in \
	liblnk/features.h.in \
	liblnk/types.h.in

DISTCLEANFILES = \
	liblnk.h \
	liblnk/definitions.h \
	liblnk/features.h \
	liblnk/types.h \
	Makefile \
	Makefile.in

