EXTRA_DIST = \
	liblnk.pmdoc/01bin.xml.in \
	liblnk.pmdoc/01bin-contents.xml \
	liblnk.pmdoc/02include.xml.in \
	liblnk.pmdoc/02include-contents.xml \
	liblnk.pmdoc/03lib.xml.in \
	liblnk.pmdoc/03lib-contents.xml \
	liblnk.pmdoc/04share.xml.in \
	liblnk.pmdoc/04share-contents.xml \
	liblnk.pmdoc/05python.xml.in \
	liblnk.pmdoc/05python-contents.xml \
	liblnk.pmdoc/index.xml \
	liblnk.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f liblnk.pmdoc/01bin.xml
	/bin/rm -f liblnk.pmdoc/02include.xml
	/bin/rm -f liblnk.pmdoc/03lib.xml
	/bin/rm -f liblnk.pmdoc/04share.xml
	/bin/rm -f liblnk.pmdoc/05python.xml
	/bin/rm -f liblnk.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

