MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libfwsi/libfwsi.vcproj \
	liblnk/liblnk.vcproj \
	libuna/libuna.vcproj \
	lnk_test_error/lnk_test_error.vcproj \
	lnk_test_get_version/lnk_test_get_version.vcproj \
	lnk_test_open_close/lnk_test_open_close.vcproj \
	lnk_test_set_ascii_codepage/lnk_test_set_ascii_codepage.vcproj \
	lnkinfo/lnkinfo.vcproj \
	pylnk/pylnk.vcproj \
	liblnk.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

