MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libfwsi/libfwsi.vcproj \
	liblnk/liblnk.vcproj \
	libuna/libuna.vcproj \
	lnk_test_data_block/lnk_test_data_block.vcproj \
	lnk_test_data_string/lnk_test_data_string.vcproj \
	lnk_test_distributed_link_tracker_properties/lnk_test_distributed_link_tracker_properties.vcproj \
	lnk_test_error/lnk_test_error.vcproj \
	lnk_test_file/lnk_test_file.vcproj \
	lnk_test_file_header/lnk_test_file_header.vcproj \
	lnk_test_io_handle/lnk_test_io_handle.vcproj \
	lnk_test_known_folder_location/lnk_test_known_folder_location.vcproj \
	lnk_test_link_target_identifier/lnk_test_link_target_identifier.vcproj \
	lnk_test_location_information/lnk_test_location_information.vcproj \
	lnk_test_notify/lnk_test_notify.vcproj \
	lnk_test_special_folder_location/lnk_test_special_folder_location.vcproj \
	lnk_test_support/lnk_test_support.vcproj \
	lnkinfo/lnkinfo.vcproj \
	pylnk/pylnk.vcproj \
	liblnk.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

